---
source: spade-tests/src/hir_lowering.rs
---
struct X {x: int<8>}

entity t() -> X {
    let (a, b) = port();
    a
}


error: b.x is unused
  ┌─ testinput:4:13
  │
4 │     let (a, b) = port();
  │             ^ b.x is unused
  │
  = note: b.x is an inverted wire (`inv`) which must be set
